--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+# Ignore Jupyter Notebook checkpoints
+.ipynb_checkpoints/
 
-/.ipynb_checkpoints
-
-# misc
+# Ignore macOS .DS_Store files
 .DS_Store
